@@ -32,6 +32,9 @@ linotp (3.1~0dev-0) experimental; urgency=low
     changes.
   * Remove references to the deactivated newsletter and former company names
   * Legacy Selfservice now correctly recognizes type=yubikey tokens in MFA login. 
+  * Manage-UI no longer gets stuck in the interface initializtaion if the logged
+    in user is missing required admin permissions. Now, it is guaranteed that a
+    logout is always possible.
 
  -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200
 
